--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
+    testImplementation 'io.mockk:mockk:1.13.13'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -45,3 +46,4 @@ allOpen {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
